--- a/src/views/pages/shop.hbs
+++ b/src/views/pages/shop.hbs
@@ -81,14 +81,14 @@
     </form>
   </aside>
   <main class="main-shop">
-    {{!-- <p>{{data}} </p> --}}
     <section class="productos-shop">
       <ul class="lista-productos-shop">
         {{#each data}}
         <li>
-          <article class="card-producto-shop">
+          <article class="card-producto">
             <a href="/shop/item/{{product_id}}">
               <picture class="cont-img-card-producto">
+                <span class="card-producto__tag">Nuevo</span>
                 <img
                   src="{{image_front}}"
                   alt="{{product_name}}"
@@ -102,6 +102,7 @@
 
             </a>
           </article>
+          </li>
           {{/each}}
 
       </ul>
