--- a/src/views/pages/admin.hbs
+++ b/src/views/pages/admin.hbs
@@ -1,8 +1,8 @@
-<main>
+<main class="main-admin container">
   <section>
     <form action="" class="form-buscar-producto">
       <figure class=""><img
-          src="../assets/icons/search_icon.svg"
+          src="/assets/icons/search_icon.svg"
           alt="Ícono de búsqueda"
         /></figure>
       <input
@@ -19,7 +19,7 @@
       <h2 class="titulo-seccion">LISTADO DE PRODUCTOS</h2>
       <div class="cont-agregar-producto">
         <p class="agregar">AGREGAR</p>
-        <button class="btn-agregar"></button>
+        <a class="btn-agregar" href="/admin/create"></a>
       </div>
     </div>
     <div>
@@ -37,162 +37,20 @@
           <h3>Categoria</h3>
         </li>
       </ul>
-      <article>
-        <ul class="cont-articulo">
-          <li>1</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>2</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>3</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>4</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>5</li>
-          <li>STW001001</li>
-          <li>Luna Lovegood Lion Mask</li>
-          <li>HARRY POTTER</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>6</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>7</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>8</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>9</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>10</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>11</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>12</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
-      <article>
-        <ul class="cont-articulo">
-          <li>13</li>
-          <li>STW001001</li>
-          <li>Baby Yoda Blueball</li>
-          <li>STAR WARS</li>
-          <li class="cont-btns">
-            <button class="btn-editar"></button>
-            <button class="btn-eliminar"></button>
-          </li>
-        </ul>
-      </article>
+      {{#each data}}
+        <article>
+          <ul class="cont-articulo">
+            <li>{{product_id}}</li>
+            <li>{{sku}}</li>
+            <li>{{product_name}}</li>
+            <li>{{licence_name}}</li>
+            <li class="cont-btns">
+              <a href="/admin/edit/{{product_id}}" class="btn-editar"></a>
+              <a href="/admin/delete/{{product_id}}" class="btn-eliminar"></a>
+            </li>
+          </ul>
+        </article>
+      {{/each}}
     </div>
 
   </section>
