--- a/src/views/pages/cart.hbs
+++ b/src/views/pages/cart.hbs
@@ -1,5 +1,4 @@
-{{> header}}
-<main class="main-carrito">
+<main class="main-carrito container">
   <h2 class="titulo-seccion titulo-carrito">CARRITO DE COMPRAS</h2>
   <div class="container cont-subtitulo-carrito">
     <h3 class="subtitulo-carrito subtitulo-carrito-detalle">DETALLE DE PRODUCTO</h3>
@@ -11,7 +10,7 @@
     <div class="cont-detalle-producto">
       <figure class="figure-img-detalle-producto">
         <img
-          src="../assets/star-wars/baby-yoda-1.webp"
+          src="/img/star-wars/baby-yoda-1.webp"
           class="img-detalle-producto"
           alt="Baby Yoda"
         />
@@ -40,7 +39,7 @@
     <div class="cont-detalle-producto">
       <figure class="figure-img-detalle-producto">
         <img
-          src="../assets/pokemon/pidgeotto-1.webp"
+          src="/img/pokemon/pidgeotto-1.webp"
           class="img-detalle-producto"
           alt="Pidgeotto"
         />
@@ -89,4 +88,3 @@
     <a href="" class="link-pago">IR A PAGAR</a>
   </div>
 </main>
-{{> footer}}
