--- a/src/views/pages/create.hbs
+++ b/src/views/pages/create.hbs
@@ -1,4 +1,4 @@
-<main class="">
+<main class="main-create-edit container">
   <h2 class="titulo-seccion">CREAR NUEVO ITEM</h2>
   <form action="" class="form-item">
     <div class="cont-categ-licencia">
