--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -1,7 +1,6 @@
-{{> header}}
 <main class="main-login">
   <h2 class="titulo-seccion titulo-login">INGRESAR A MI CUENTA</h2>
-  <form action="" class="form-login-register">
+  <form action="/admin" class="form-login-register" method="post">
     <div class="cont-input">
       <label for="email">Email:</label>
       <input
@@ -35,4 +34,3 @@
   </form>
   <a href="" class="link-form">Olvidé mi cuenta</a>
 </main>
-{{> footer}}
