--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,39 +1,68 @@
 <header>
-
-  <nav class="navbar container">
-    <picture><a href="/home">
-        <img
-          src="/assets/branding/logo_light_horizontal.svg"
-          alt="Logo Funkoshop"
-          class="logo"
-        />
-      </a></picture>
-    <ul class="navbar__menu">
-      <li class="navbar__item whit-submenu">
-        <a href="/shop" class="navbar-link whit-icon">SHOP
-          <iconify-icon icon="tabler:chevron-down"></iconify-icon></a>
-        <ul class="submenu">
-          <li class="submenu-item"><a href="/shop">
-              FUNKOS
-            </a></li>
-          <li class="submenu-item"><a href=""> REMERAS </a></li>
-          <li class="submenu-item"><a href=""> LLAVEROS </a></li>
-        </ul>
-      </li>
-      <li class="navbar__item"><a class="navbar-link" href="">CONTACTO</a></li>
-      <li class="navbar__item"><a
-          class="navbar-link"
-          href="/auth/login"
-        >LOGIN</a></li>
-      <li class="navbar__item">
-        <a class="navbar__link-cart" href="/shop/cart"><img
-            src="/assets/icons/cart-icon.svg"
-            alt="Icono de carrito de compras"
+  {{#if isLogged}}
+    <nav class="navbar container">
+      <picture class="navbar__logo">
+        <a href="/home">
+          <img
+            src="/img/branding/logo_light_horizontal.svg"
+            alt="isoLogotipo de la Marca Funkoshop"
           />
         </a>
-      </li>
-    </ul>
-  </nav>
+      </picture>
+
+      <ul class="navbar__menu">
+        <li class="navbar__item">
+          <a class="navbar-link" href="/shop">VER TIENDA</a>
+        </li>
+        <li class="navbar__item">
+          <a class="navbar-link" href="/admin">ADMIN</a>
+        </li>
+        <li class="navbar__item">
+          <a class="navbar-link" href="/home">SALIR</a>
+        </li>
+      </ul>
+    </nav>
+
+  {{else}}
+    <nav class="navbar container">
+      <picture><a href="/home">
+          <img
+            src="/assets/branding/logo_light_horizontal.svg"
+            alt="Logo Funkoshop"
+            class="logo"
+          />
+        </a></picture>
+      <ul class="navbar__menu">
+        <li class="navbar__item whit-submenu">
+          <a href="/shop" class="navbar-link whit-icon">SHOP
+            <iconify-icon icon="tabler:chevron-down"></iconify-icon></a>
+          <ul class="submenu">
+            <li class="submenu-item"><a href="/shop">
+                FUNKOS
+              </a></li>
+            <li class="submenu-item"><a href=""> REMERAS </a></li>
+            <li class="submenu-item"><a href=""> LLAVEROS </a></li>
+          </ul>
+        </li>
+        <li class="navbar__item"><a
+            class="navbar-link"
+            href=""
+          >CONTACTO</a></li>
+        <li class="navbar__item"><a
+            class="navbar-link"
+            href="/auth/login"
+          >LOGIN</a></li>
+        <li class="navbar__item">
+          <a class="navbar__link-cart" href="/shop/cart"><img
+              src="/assets/icons/cart-icon.svg"
+              alt="Icono de carrito de compras"
+            />
+          </a>
+        </li>
+      </ul>
+    </nav>
+  {{/if}}
+
 </header>
 <script
   src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
