--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -17,7 +17,8 @@
           <h3 class="articulo-detalle-titulo">{{licence_name}}
           </h3>
           <p class="articulo-detalle-descripcion">{{licence_description}}</p>
-          <button class="btn-ver-coleccion">VER COLECCIÓN</button>
+          <a href="/shop/{{licence_name}}" class="btn-ver-coleccion">VER
+            COLECCIÓN</a>
 
         </div>
         <picture class="cont-img-articulo"><img
