--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -32,7 +32,7 @@
 
   </section>
 
-  <section class="slider container glide">
+  <section class="slider container glide section-ultimos-lanzamientos">
     <h2 class="slider__title titulo-seccion">últimos lazamientos</h2>
     <div class="glide__track" data-glide-el="track">
       <ul class="slider__items glide__slides">
