--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,15 +1,14 @@
 <header>
   {{#if isLogged}}
-    <nav class="navbar container">
-      <picture class="navbar__logo">
-        <a href="/home">
-          <img
-            src="/img/branding/logo_light_horizontal.svg"
-            alt="isoLogotipo de la Marca Funkoshop"
-          />
-        </a>
-      </picture>
 
+    <nav class="navbar container">
+      <picture><a href="/home">
+          <img
+            src="/assets/branding/logo_light_horizontal.svg"
+            alt="Logo Funkoshop"
+            class="logo"
+          />
+        </a></picture>
       <ul class="navbar__menu">
         <li class="navbar__item">
           <a class="navbar-link" href="/shop">VER TIENDA</a>
